[gd_scene load_steps=11 format=3 uid="uid://bswoaf0h0e7fw"]

[ext_resource type="Script" path="res://scripts/planet.gd" id="1_ysgxj"]

[sub_resource type="SphereShape3D" id="SphereShape3D_siau7"]
radius = nan

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8l0oq"]
transparency = 1
albedo_color = Color(1, 0, 0, 0.5)

[sub_resource type="SphereMesh" id="SphereMesh_2aehb"]
radius = nan
height = nan

[sub_resource type="SphereShape3D" id="SphereShape3D_vw5rc"]
radius = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5gdrr"]
albedo_color = Color(0, 0, 0, 1)
metallic = 0.1
roughness = 0.8

[sub_resource type="SphereMesh" id="SphereMesh_xe2rh"]
radius = 0.0
height = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0o5iw"]
albedo_color = Color(1, 0.816816, 0.77567, 1)

[sub_resource type="SphereMesh" id="SphereMesh_hro5y"]
material = SubResource("StandardMaterial3D_0o5iw")

[sub_resource type="Curve" id="Curve_00h45"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.686192, 0.516483), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.409789, 0.0, 0, 0]
point_count = 3

[node name="Planet" type="RigidBody3D" groups=["Planets"]]
lock_rotation = true
max_contacts_reported = 25
contact_monitor = true
script = ExtResource("1_ysgxj")

[node name="HillArea" type="Area3D" parent="."]
gravity_space_override = 1
gravity_point = true
gravity_point_center = Vector3(0, 0, 0)
gravity_direction = Vector3(0, 0, 0)
gravity = 5.0

[node name="HillAreaShape" type="CollisionShape3D" parent="HillArea"]
shape = SubResource("SphereShape3D_siau7")

[node name="HillAreaSurface" type="MeshInstance3D" parent="HillArea"]
material_override = SubResource("StandardMaterial3D_8l0oq")
mesh = SubResource("SphereMesh_2aehb")

[node name="PlanetShape" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_vw5rc")

[node name="PlanetSurface" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_5gdrr")
mesh = SubResource("SphereMesh_xe2rh")

[node name="Explosion" type="CPUParticles3D" parent="."]
emitting = false
amount = 60
lifetime = 0.29
one_shot = true
explosiveness = 1.0
randomness = 0.5
mesh = SubResource("SphereMesh_hro5y")
direction = Vector3(0, 0, 0)
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_max = 20.0
linear_accel_max = 32.55
scale_amount_min = 2.0
scale_amount_max = 6.0
scale_amount_curve = SubResource("Curve_00h45")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="area_entered" from="HillArea" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="HillArea" to="." method="_on_area_3d_area_exited"]
